general settings fixed + scrollbar style

--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,9 @@ nav,
     height: 100%;
     /* alte tanto quanto il main (chi le contiene) */
 }
-nav, 
-footer {
+/* nav {
     overflow: hidden;
-}
+} */
 ul {
     list-style-type: none;
 }
@@ -62,6 +61,7 @@ h2 {
 main {
     /* Alto il 100% del wrapper meno l'altezza del footer */
     height: calc( 100% - 80px);
+    overflow: hidden;
 }
 
 /* UPGRADE BUTTON */
@@ -129,6 +129,8 @@ nav {
     min-height: 160px;
     overflow: hidden;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 .playlist_container .icon-text {
     padding-top: 10px;
@@ -182,7 +184,6 @@ nav {
 /* Main content */
 .main-content {
     padding-top: 110px;
-    /* test */
     background-color: #141922;
     /* Largo il 100% del main meno la larghezza della navbar a sinistra */
     width: calc( 100% - 220px );
@@ -250,6 +251,11 @@ footer {
     align-items: center;
     flex-wrap: nowrap;
 }
+.track-info,
+.player, 
+.volume {
+    flex-basis: 230px;
+}
 
 /* Col 1 */
 .track-info > div {
@@ -283,7 +289,6 @@ footer {
 /* Player icons */
 .player {
     text-align: center;
-    width: 40%;
 }
 .player-icons li {
     display: inline-block;
@@ -339,7 +344,6 @@ footer {
 /* Volume icons */
 .volume {
     text-align: right;
-    width: 27%;
 }
 .volume li {
     padding-left: 8px;
@@ -425,4 +429,20 @@ footer {
     .player {
         padding: 20px 0;
     }
+}
+
+
+/* Scrollbar style */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
